--- a/styles/app.css
+++ b/styles/app.css
@@ -1,16 +1,174 @@
-.card {
-  float: left;
-  border: solid 1px black;
-  width: 100px;
-  border-radius: 5px;
-  height: 140px;
-  margin-right: 20px;
-}
-
 .covered {
-  background-color: black;
+  background-image: url('../img/card-back.png');
+  color: transparent;
 }
 
 .hand {
   overflow: auto;
+}
+
+.AceClubs  {
+  background-image: url('../img/cards/ace-clubs.png');
+}
+.2Clubs  {
+  background-image: url('../img/cards/2-clubs.png');
+}
+.3Clubs  {
+  background-image: url('../img/cards/3-clubs.png');
+}
+.4Clubs  {
+  background-image: url('../img/cards/4-clubs.png');
+}
+.5Clubs  {
+  background-image: url('../img/cards/5-clubs.png');
+}
+.6Clubs  {
+  background-image: url('../img/cards/6-clubs.png');
+}
+.7Clubs  {
+  background-image: url('../img/cards/7-clubs.png');
+}
+.8Clubs  {
+  background-image: url('../img/cards/8-clubs.png');
+}
+.9Clubs  {
+  background-image: url('../img/cards/9-clubs.png');
+}
+.10Clubs  {
+  background-image: url('../img/cards/10-clubs.png');
+}
+.JackClubs  {
+  background-image: url('../img/cards/jack-clubs.png');
+}
+.QueenClubs  {
+  background-image: url('../img/cards/queen-clubs.png');
+}
+.KingClubs {
+  background-image: url('../img/cards/king-clubs.png');
+}
+.AceDiamonds  {
+  background-image: url('../img/cards/ace-diamonds.png');
+}
+.2Diamonds  {
+  background-image: url('../img/cards/2-diamonds.png');
+}
+.3Diamonds  {
+  background-image: url('../img/cards/3-diamonds.png');
+}
+.4Diamonds  {
+  background-image: url('../img/cards/4-diamonds.png');
+}
+.5Diamonds  {
+  background-image: url('../img/cards/5-diamonds.png');
+}
+.6Diamonds  {
+  background-image: url('../img/cards/6-diamonds.png');
+}
+.7Diamonds  {
+  background-image: url('../img/cards/7-diamonds.png');
+}
+.8Diamonds  {
+  background-image: url('../img/cards/8-diamonds.png');
+}
+.9Diamonds  {
+  background-image: url('../img/cards/9-diamonds.png');
+}
+.10Diamonds  {
+  background-image: url('../img/cards/10-diamonds.png');
+}
+.JackDiamonds  {
+  background-image: url('../img/cards/jack-diamonds.png');
+}
+.QueenDiamonds  {
+  background-image: url('../img/cards/queen-diamonds.png');
+}
+.KingDiamonds {
+  background-image: url('../img/cards/king-diamonds.png');
+}
+.AceHearts  {
+  background-image: url('../img/cards/ace-hearts.png');
+}
+.2Hearts  {
+  background-image: url('../img/cards/2-hearts.png');
+}
+.3Hearts  {
+  background-image: url('../img/cards/3-hearts.png');
+}
+.4Hearts  {
+  background-image: url('../img/cards/4-hearts.png');
+}
+.5Hearts  {
+  background-image: url('../img/cards/5-hearts.png');
+}
+.6Hearts  {
+  background-image: url('../img/cards/6-hearts.png');
+}
+.7Hearts  {
+  background-image: url('../img/cards/7-hearts.png');
+}
+.8Hearts  {
+  background-image: url('../img/cards/8-hearts.png');
+}
+.9Hearts  {
+  background-image: url('../img/cards/9-hearts.png');
+}
+.10Hearts  {
+  background-image: url('../img/cards/10-hearts.png');
+}
+.JackHearts  {
+  background-image: url('../img/cards/jack-hearts.png');
+}
+.QueenHearts  {
+  background-image: url('../img/cards/queen-hearts.png');
+}
+.KingHearts {
+  background-image: url('../img/cards/king-hearts.png');
+}
+.AceSpades {
+  background-image: url('../img/cards/ace-spades.png');
+}
+.2Spades {
+  background-image: url('../img/cards/2-spades.png');
+}
+.3Spades {
+  background-image: url('../img/cards/3-spades.png');
+}
+.4Spades {
+  background-image: url('../img/cards/4-spades.png');
+}
+.5Spades {
+  background-image: url('../img/cards/5-spades.png');
+}
+.6Spades {
+  background-image: url('../img/cards/6-spades.png');
+}
+.7Spades {
+  background-image: url('../img/cards/7-spades.png');
+}
+.8Spades {
+  background-image: url('../img/cards/8-spades.png');
+}
+.9Spades {
+  background-image: url('../img/cards/9-spades.png');
+}
+.10Spades {
+  background-image: url('../img/cards/10-spades.png');
+}
+.JackSpades {
+  background-image: url('../img/cards/jack-spades.png');
+}
+.QueenSpades {
+  background-image: url('../img/cards/queen-spades.png');
+}
+.KingSpades{
+  background-image: url('../img/cards/king-spades.png');
+}
+
+.card {
+  float: left;
+  border: solid 1px black;
+  width: 120px;
+  border-radius: 5px;
+  height: 167px;
+  margin-right: 20px;
 }
